--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-pi@import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600);
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 @import url(additional-fonts.css);
 
 html{
